--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "slova",
   "version": "0.1.0",
+  "homepage": "https://dmitry-dudarev.github.io/slova/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
